# shoop-checkoutfi

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements-test.txt  setup.cfg  setup.py
shoop_checkoutfi/: __init__.py  admin_forms.py  apps.py  checkoutfi.py  models.py  payment_method.py
shoop_checkoutfi/locale/fi/LC_MESSAGES/: django.po
shoop_checkoutfi/migrations/: 0001_initial.py
shuup_checkoutfi/: __init__.py  admin_forms.py  apps.py  checkoutfi.py  models.py
shuup_checkoutfi/locale/en/LC_MESSAGES/: django.po
shuup_checkoutfi/locale/fi/LC_MESSAGES/: django.po
shuup_checkoutfi/locale/sv/LC_MESSAGES/: django.po
shuup_checkoutfi/migrations/: 0001_initial.py  0002_update_managers.py
shuup_checkoutfi/templates/shuup/checkoutfi/: wizard_form.jinja
shuup_checkoutfi_tests/: settings.py  test_payment_processor.py  test_wizard.py
