[metadata]
name = shuup-checkoutfi
version = 0.6.0
description = Shuup Checkout.fi Integration
long_description = file: README.rst
keywords = stripe, shuup
license = MIT
license_file = LICENSE

[options]
include_package_data = True
packages = find:
install_requires =
    shuup>=0.4

[options.entry_points]
shuup.addon = shuup_checkoutfi = shuup_checkoutfi

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 115
