[metadata]
name = shuup-checkoutfi
version = 0.6.1.post+gitver
description = Shuup Checkout.fi Integration
long_description = file: README.rst
keywords = stripe, shuup
license = MIT
license_file = LICENSE

[options]
include_package_data = True
packages = find:
install_requires =
    shuup>=0.4

[options.entry_points]
shuup.addon = shuup_checkoutfi = shuup_checkoutfi

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_checkoutfi_tests.settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[flake8]
exclude = .tox,dist,venv,migrations,docs,build,doc
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
combine_as_imports=false
multi_line_output=5
not_skip=__init__.py
length_sort=false
line_length=79
order_by_type=false
wrap_length=79
diff=True
skip=.tox,dist,venv,migrations,docs,build,.egg
known_first_party=shuup_checkoutfi
known_standard_library=token,tokenize,enum,importlib
known_third_party=
    django
    enumfields
    jsonfield
    mock
    pytest
    shuup
    six
